--- a/_config.yml
+++ b/_config.yml
@@ -615,12 +615,11 @@ artitalk:
 ## https://github.com/EYHN/hexo-helper-live2d
 live2d:
   enable: true
-  # enable: false
-  # scriptFrom: local # 默认
+  scriptFrom: local # 默认
   pluginRootPath: live2dw/ # 插件在站点上的根目录(相对路径)
   pluginJsPath: lib/ # 脚本文件相对与插件根目录路径
   pluginModelPath: assets/ # 模型文件相对与插件根目录路径
-  scriptFrom: jsdelivr # jsdelivr CDN
+  # scriptFrom: jsdelivr # jsdelivr CDN
   # scriptFrom: unpkg # unpkg CDN
   # scriptFrom: https://cdn.jsdelivr.net/npm/live2d-widget@3.x/lib/L2Dwidget.min.js # 你的自定义 url
   tagMode: false # 标签模式, 是否仅替换 live2d tag标签而非插入到所有页面中
